--- a/notes and reports/initial report.tex
+++ b/notes and reports/initial report.tex
@@ -9,7 +9,7 @@
 \newcommand{\name}{\textbackslash{}English}
 
 \title{\name{}}
-\date{2015-08-28}
+\date{09/18/2015}
 \author{Connor Davey}
 
 \begin{document}
