I added a couple new examples and pushed the compiler template.
First, I added a few new \English code samples inspired by problems shown
to me by Tyler. The new one in the "Java ports" folder, "word pattern",
also includes a Java version that does the same thing. I also tried to
make a Haskell version... though I'm not sure if it works....

I also added the first start of the compiler. It's just some template
classes to start figuring out organization of the compiler code and how
we can go about making the compiler.

Finally, I made a few minor changes to the \English Gedit syntax high-
lighting. I'm always improving it a bit at a time when I find little
things here and there.

Signed-off-by: REALDrummer <conman.davey@gmail.com>

--- a/gedit coloring/\English.lang
+++ b/gedit coloring/\English.lang
@@ -524,6 +524,14 @@
 							<!-- TODO: beng context should be ref'd here, but it would interfere with the switch's block! -->
 						</context>
 					</include>
+				</context>				
+				
+				<context id="errors-and-warnings-with-optional-saving-word">
+					<match>((warning|error)s?)(\s+saying)?</match>
+					<include>
+						<context sub-pattern="2" style-ref="type"/>
+						<context sub-pattern="3" style-ref="common-defines"/>
+					</include>
 				</context>
 				
 				<context id="read-as-a">
@@ -618,14 +626,6 @@
 					)\b</match>
 				</context>
 				
-				<context id="errors-and-warnings-with-optional-saving-word">
-					<match>((warning|error)s?)(\s+saying)?</match>
-					<include>
-						<context sub-pattern="1" style-ref="type"/>
-						<context sub-pattern="2" style-ref="common-defines"/>
-					</include>
-				</context>
-				
 				<!-- stdlib basic types -->
 				<context id="error-prone-type" style-ref="type" class="type">
 					<match>(?&lt;=[A-Za-z])\?</match>
@@ -653,7 +653,6 @@
 							((exec(utable)?|data?|binary|text|random\s+access)\s+)?file|RAF|R\.A\.F\.|
 							char(acter)?|
 							string|
-							((array|hash)\s+)?map|
 							warning|
 							error|
 							enum(\s+value)?|
@@ -673,8 +672,9 @@
 							queue|
 							stack|
 							((AVL|A\.V\.L\.|red(-|\s+)black|RB|R.B.|binary(\s+search)?)\s+)?tree|BST|B\.S\.T\.|
-							tuple)
-						s?(\s+of)?|
+							tuple|
+							((array|hash)\s+)?map
+						)s?(\s+of)?|
 						(
 							process|
 							regex
